# icg_wireframe

./: .clangd  CMakeLists.txt  README.md  resources.qrc
lib/canvas/: CMakeLists.txt  canvas.cpp  canvas.hpp  canvas_utils.cpp  canvas_utils.hpp
lib/canvaspanel/: CMakeLists.txt  canvaspanel.cpp  canvaspanel.hpp  canvaspanel.ui  gradient.cpp  gradient.hpp
lib/editor/: CMakeLists.txt  editor.cpp  editor.hpp  editor.ui  point_item.cpp  point_item.hpp  scalable_graphics_view.cpp  scalable_graphics_view.hpp
lib/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
lib/model/: CMakeLists.txt  fileprocessor.cpp  fileprocessor.hpp  model.cpp  model.hpp  utils.hpp
lib/spline/: CMakeLists.txt  point.hpp  spline.cpp  spline.hpp
src/: main.cpp
